<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="white_cobalt">White Cobalt</string>
    <string name="car_number">01 J 775 AA</string>
    <string name="tariff">Tariff</string>
    <string name="payment_type">Payment type</string>
    <string name="comfort">Comfort</string>
    <string name="cash">Cash</string>
    <string name="date">18:25, Today</string>
    <string name="time">19:00</string>
    <string name="dest1">Amir Temur Avenue 2a block 23 A</string>
    <string name="dest2">Sagbon 156 a block, Olmazor distri…</string>
    <string name="trip_time">Trip time</string>
    <string name="distance">Distance</string>
    <string name="title_mainactivity">MainActivity</string>
    <string name="trip_history_title">Trip history</string>
</resources>
