<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
android:layout_marginTop="7.95dp"
        >

    <TextView

            android:layout_height="21dp"
            android:lineSpacingMultiplier="1.17"
            style="@style/WhiteCobalt"
            android:text="@string/white_cobalt"
            android:layout_width="160dp"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:includeFontPadding="true"
            android:layout_height="28dp"

            style="@style/car_number"
            android:text="@string/car_number"
            android:layout_width="wrap_content"
            android:id="@+id/textView2"
            android:paddingStart="5dp"

            android:background="@drawable/car_number_box"
            app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <View android:layout_width="2dp"
          android:layout_height="28dp"
          android:background="@drawable/car_number_box_line"
          app:layout_constraintStart_toStartOf="@+id/textView"
          android:layout_marginTop="12dp"
          app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="28dp"/>
    <TextView
            android:layout_height="16dp"
            style="@style/Tariff"
            android:text="@string/tariff"
            android:layout_width="156dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:layout_height="16dp"
            style="@style/Tariff"
            android:text="@string/payment_type"
            android:layout_width="156dp"
            android:id="@+id/textView4"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"/>
    <TextView
            android:layout_height="19dp"
            style="@style/Comfort"
            android:text="@string/comfort"
            android:layout_width="156dp"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:layout_height="19dp"
            style="@style/Comfort" android:text="@string/cash" android:layout_width="156dp"
            android:id="@+id/textView6"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView4"/>
    <View
            app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C4C1C1"
    />
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/bnt_call"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="192dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:contentDescription="TODO"/>
</android.support.constraint.ConstraintLayout>