<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_point_start"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="38dp" app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_width="2dp"
            android:layout_height="23dp"
            android:background="@drawable/dashed_vertical"
            android:layerType="software"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="11dp"
            android:id="@+id/imageView4"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_point_end"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:layout_height="16dp"
            style="@style/Tariff"
            android:text="@string/date"
            android:layout_width="104dp"
            android:id="@+id/textView17" android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:layout_height="19dp"
            android:layout_width="280dp"
            android:shadowColor="#FFFFFFFF"
            android:shadowRadius="20"
            style="@style/Comfort"
            android:text="@string/dest2"

            android:id="@+id/textView18" app:layout_constraintStart_toStartOf="@+id/textView17"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/textView17"/>
    <TextView
            android:layout_height="16dp"
            android:layout_width="104dp"
            style="@style/Tariff"
            android:text="@string/time"

            android:id="@+id/textView19" app:layout_constraintStart_toStartOf="@+id/textView18"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/textView18"/>
    <TextView
            android:layout_height="19dp"
            android:layout_width="280dp"
            android:shadowColor="#FFFFFFFF"
            android:shadowRadius="20"
            style="@style/Comfort"
            android:text="@string/dest1"
            android:id="@+id/textView20" app:layout_constraintStart_toStartOf="@+id/textView19"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/textView19"/>
    <View
            app:layout_constraintStart_toStartOf="@+id/textView20"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C4C1C1"
    />
</android.support.constraint.ConstraintLayout>